syntax = "proto3";

package service_2;


option go_package = "./proto";

message Request {
  string symbol = 1;
  string interval = 2;
}

message Response {
  bytes  data_binance = 1;
}



service Service1 {
  rpc GetDataFromApi(Request) returns (Response);
}
